# inspect_swe

./: .gitignore  .nojekyll  AGENTS.md  CHANGELOG.html  CHANGELOG.html.md  CHANGELOG.html.md.sha  CHANGELOG.md  CONTRIBUTING.md  Makefile  PR.md  README.md  about.html  claude_code.html  claude_code.html.md  claude_code.html.md.sha  codex_cli.html  codex_cli.html.md  codex_cli.html.md.sha  gemini_cli.html  gemini_cli.html.md  gemini_cli.html.md.sha  index.html  index.html.md  index.html.md.sha  install_claude.py  k8sdebug.py  llms-full.txt  llms-guide.txt  llms.txt  mini_swe_agent.html  mini_swe_agent.html.md  mini_swe_agent.html.md.sha  opencode.html  opencode.html.md  opencode.html.md.sha  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: build.yaml  claude-review.yml  publish.yaml  publish.yml  release.yaml
.zed/: settings.json
docs/: .gitignore  _quarto.yml  claude_code.qmd  codex_cli.qmd  gemini_cli.qmd  index.qmd  kimi_code.qmd  mini_swe_agent.qmd  opencode.qmd  styles.css
docs/_snippets/: agent_bridged_tools.md  agent_centaur.md  agent_installation.md  agent_intro.md  agent_mcp_servers.md  agent_options.md  agent_troubleshooting.md
docs/reference/: index.qmd
examples/bridged_tools/: task.py
examples/mcp/: task.py
examples/multi_call/: task.py
examples/multiple_attempts/: task.py
examples/skills/: task.py
examples/system_explorer/: Dockerfile  dataset.json  task.py
reference/: index.html  index.html.md  index.html.md.sha  refs.json
tests/: conftest.py  test_acp_errors.py  test_acp_session_resume.py  test_agent_claude_code.py  test_antigravity.py  test_antigravity_cli.py  test_antigravity_confinement.py  test_attempts.py  test_bridged_tools.py  test_claude_code.py  test_claude_code_agentbinary.py  test_claude_code_exit.py  test_claude_code_helpers.py  test_claude_code_loop.py  test_claude_code_mcp_allowed_tools.py  test_claude_code_model.py  test_codex_agentbinary.py  test_codex_align.py  test_codex_config.py  test_codex_model_catalog.py  test_codex_resume.py  test_codex_rollout.py  test_codex_transcript_parsing.py  test_download.py  test_ensure_wheels_install.py  test_k8s.py  test_kimi_setup.py  test_mcp.py  test_mini_swe_setup.py  test_model_config_live.py  test_multi_call.py  test_opencode_setup.py  test_options.py  test_presented_model_live.py  test_reliability_baseline.py  test_reliability_cli.py  test_reliability_guardrails.py  test_reliability_hooks.py  test_reliability_orchestrator.py  test_reliability_telemetry.py  (+8 more)
(+124 files in other folders)
