[build-system]
# Cap hatchling <1.30: 1.30.0 emits core metadata 2.5 (PEP 794), which PyPI
# does not yet accept (https://github.com/pypi/warehouse/issues/19083).
# Relax once warehouse supports metadata 2.5.
requires = ["hatchling<1.30", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inspect_swe"
dynamic = ["version"]
description = "Software engineering agents for Inspect AI."
authors = [{ name = "Meridian Labs" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
    "httpx",
    "inspect_ai>=0.3.244",
    "nest_asyncio",
    "platformdirs",
    "pydantic>=2.13.0",
    "pyyaml",
    "sniffio",
    "anyio",
    "typing_extensions>=4.9.0",
    "agent-client-protocol>=0.11.0",
]

[project.urls]
Documentation = "https://meridianlabs-ai.github.io/inspect_swe/"
"Source Code" = "https://github.com/meridianlabs-ai/inspect_swe"
"Issue Tracker" = "https://github.com/meridianlabs-ai/inspect_swe/issues"

[project.entry-points.inspect_ai]
inspect_swe = "inspect_swe._registry"


[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "anthropic",
    "openai",
    "pytest-dotenv",
    "types-PyYAML",
    "IPython",
    "inspect-evals",
    "inspect_k8s_sandbox",
    "mini-swe-agent",
    "inspect_swe[doc]",
]
doc = [
    "quarto-cli>=1.9.36",
    "griffe>=2",
    "panflute",
    "markdown",
    "rich",
]

[tool.hatch.build]
only-packages = true
exclude = ["docs/", "tests/"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/inspect_swe/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version" # Important for PyPI compatibility

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
extend-exclude = ["docs"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM101", # duplicate isinstance
    # "RET", # flake8-return
    # "RUF", # ruff rules
]
ignore = ["E203", "E501", "D10", "D212", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src", "tests"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
python_executable = ".venv/bin/python"
